--- a/views/login.html
+++ b/views/login.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS -->
-  <link rel="stylesheet" href="../out/output.css">
+  <link rel="stylesheet" href="./css/login.css">
   <!-- favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="../icon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../icon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../icon/favicon-16x16.png">
-  <link rel="manifest" href="../icon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./icon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./icon/favicon-16x16.png">
+  <link rel="manifest" href="./icon/site.webmanifest">
   <!-- Title of page -->
   <title>Welcome to Stack &#169</title>
   <!-- imports -->
