added the landing login pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <div class="backdrop-blur-sm flex flex-col lg:flex backdrop-brightness-75 h-full w-full">
       <nav class="flex w-full h-9 justify-around text-2xl text-white pt-7">
         <i class="fa-solid fa-city hover:text-yellow-300"></i>
-        <h1 class ="font-pacifico text-3xl text-yellow-300">Stack</h1>
+        <h1 class ="font-pacifico text-3xl text-yellow-300">HmClean</h1>
         <i class="fa-solid fa-cubes-stacked hover:text-yellow-300"></i>
       </nav>
       <div class = "flex flex-col grow justify-around ">
@@ -32,8 +32,8 @@
           </div>
         </div>
         <div class = "flex w-full justify-evenly">
-          <button class="rounded-full border-2 w-fit px-10 self-center text-white text-3xl font-pacifico border-white duration-300 hover:text-yellow-300 hover:scale-110"> <a href="./login.html">Admin</a></button>
-          <button class="rounded-full border-2 w-fit px-10 self-center text-white text-3xl font-pacifico border-white duration-300 hover:text-yellow-300 hover:scale-110"><a href="./login.html">User</a></button>
+          <button class="rounded-full border-2 w-fit px-10 self-center text-white text-3xl font-pacifico border-white duration-300 hover:text-yellow-300 hover:scale-110"> <a href="/admin/login">Admin</a></button>
+          <button class="rounded-full border-2 w-fit px-10 self-center text-white text-3xl font-pacifico border-white duration-300 hover:text-yellow-300 hover:scale-110"><a href="/user/login">User</a></button>
         </div>
       </div>
     </div>
