--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="../static/css/login.css">
   <!-- favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./stati/icon/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./static/icon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./static/icon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./static/icon/favicon-16x16.png">
   <link rel="manifest" href="./static/icon/site.webmanifest">
@@ -26,9 +26,10 @@
       <div class = "h-screen ">
         <form action="#" method="post" class = "flex flex-col justify-around h-full w-full items-center">
             <div class ='flex flex-col items-center space-y-7'>
-              <input type="text" name="username" id="username " placeholder="<%= who ==='user'?'User':'Admin' %> " class ="bg-transparent  border-2 border-white rounded-full p-5 px-14 text-white ">
-              <input type="password" name="password" id="password" placeholder="password" class ="bg-transparent border-2 border-white rounded-full p-5 px-14 text-white">
+              <input type="text" name="username" id="username " placeholder="<%= who ==='user'?'User':'Admin' %> " class ="bg-transparent  border-2 border-white placeholder-white rounded-full p-5 px-14 text-white ">
+              <input type="password" name="password" id="password" placeholder="<%= wrong==='true'?'Invalid Password':'Password' %>" class ="bg-transparent border-2 rounded-full p-5 px-14 text-white <%= wrong==='true'?'border-red-500 placeholder-red-500 animate-pulse':'border-white placeholder-white' %>  ">
             </div>
+             
             <div>
             <button type="submit" class ="bg-transparent border-2 border-white rounded-full py-2 font-roboto font-extrabold hover:scale-110 duration-300 hover:text-yellow-300 hover:border-4 hover:border-yellow-300   text-white px-10">Log In</button>
             </div>
