login page and landing page done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <div class="backdrop-blur-sm flex flex-col lg:flex backdrop-brightness-75 h-full w-full">
       <nav class="flex w-full h-9 justify-around text-2xl text-white pt-7">
         <i class="fa-solid fa-city hover:text-yellow-300"></i>
-        <h1 class ="font-pacifico text-3xl text-yellow-300">HmClean</h1>
+        <h1 class ="font-pacifico text-3xl text-yellow-300">Stack</h1>
         <i class="fa-solid fa-cubes-stacked hover:text-yellow-300"></i>
       </nav>
       <div class = "flex flex-col grow justify-around ">
