--- a/views/uDashboard.ejs
+++ b/views/uDashboard.ejs
@@ -33,7 +33,7 @@
       </div>
       <div class = "h-screen ">
         <!-- form section -->
-        <form action="#" id = 'frm1' method="get" class = "flex flex-col justify-around h-full w-full items-center">
+        <form action="/user/addComplaint" id = 'frm1' method="post" class = " <%= is ==='true'?'hidden':'' %>  flex flex-col justify-around h-full w-full items-center">
             <div class ='flex flex-col items-center space-y-7'>
               <select name="staff" id="staff-select" class ="bg-transparent border-2 border-white rounded-full p-5 px-14 placeholder-white text-white ">
                   <option value="">--Please choose an option--</option>
@@ -42,19 +42,18 @@
                   <option value="Electrician">Electrician</option>
                   <option value="Carpenter">Carpenter</option>
               </select>
-              <input type="text" name="roll" id="roll" placeholder="Staff ID" class ="w-full bg-transparent border-2 border-white rounded-full p-5 px-14 placeholder-white text-white ">
+              <input type="text" name="roll" id="roll" placeholder="Student ID" class ="w-full bg-transparent border-2 border-white rounded-full p-5 px-14 placeholder-white text-white ">
             </div>
             <div>
               <button type="submit" class ="bg-transparent border-2 border-white rounded-full py-2 font-roboto font-extrabold hover:scale-110 duration-300 hover:text-yellow-300 hover:border-4 hover:border-yellow-300   text-white px-10">Submit</button>
             </div>
         </form>
         <!-- returning the comlaint id -->
-        <!-- <div class = "  text-center text-4xl flex flex-col items-center h-full justify-center  font-pacifico text-white pt-50 ">
-          <h1>Your complaint id is : </h1>
-          <h1 class = " text-yellow-400">10924850</h1>
+        <!-- <div class = "  <%= is==='true'?'':'hidden'%>   text-center text-4xl flex flex-col items-center h-full justify-center  font-pacifico text-white pt-50 "id="showId"> <h1>Your complaint id is : </h1>
+          <h1 class = " text-yellow-400"><%= cmpId %></h1>
         </div> -->
         <!-- ressorlve form  -->
-        <form  action="#" method="get" class = " hidden flex flex-col justify-around h-full w-full items-center " id ="frm2">
+        <form  action="/user/resolve" method="post" class = " hidden flex flex-col justify-around h-full w-full items-center " id ="frm2">
           <div class ='flex flex-col items-center space-y-7'>
             <input type="text" name="CompId" id="compId" placeholder="Complaint ID" class ="w-full bg-transparent border-2 border-white rounded-full p-5 px-14 placeholder-white text-white ">
             <input type="text" name="staffId" id="staffId" placeholder="Staff ID" class ="w-full bg-transparent border-2 border-white rounded-full p-5 px-14 placeholder-white text-white ">
